syntax = "proto3";

package mpb;

option go_package = "./mpb";

import "common.proto";

service NFTService {
    rpc GetAptosNFTs(ReqGetAptosNFTs) returns (ResGetAptosNFTs);
    rpc GetAptosNFTMetadatas(ReqGetAptosNFTMetadatas) returns (ResGetAptosNFTMetadatas);
    rpc GetAptosNFTsV2(ReqGetAptosNFTsV2) returns (ResGetAptosNFTsV2);
}

message ReqGetAptosNFTs {
    string wallet_addr = 1;
    repeated ENFT.NFTType nft_types = 2;
}

message ResGetAptosNFTs {
    repeated AptosNFTNode nfts = 1;
}

message ReqGetAptosNFTMetadatas {
    repeated uint64 nft_ids = 1;
}

message ResGetAptosNFTMetadatas {
    repeated AptosNFTMetadata metadatas = 1;
}

message ReqGetAptosNFTsV2 {
    uint64 user_id = 1;
    string wallet_addr = 2;
}

message ResGetAptosNFTsV2 {
    repeated AptosNFTNodeV2 nfts = 1;
}